--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -7,9 +7,9 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
       <title>
-          {% block title %}
+        {% block title %}
 
-          {% endblock %}
+        {% endblock %}
       </title>
    </head>
    <body>
@@ -37,6 +37,19 @@
         </ul>
       </div>
     </nav>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+              <button class="m1-2 mb-1 close" type="button" data-dismiss="alert", aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              {{message[8:-2]}}
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}    
+
       {% block content %}
 
       {% endblock %}
