--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <title>
         {% block title %}
 
@@ -27,14 +28,34 @@
                 <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
             </li>
         </ul>
-        <ul class="navbar-nav">
+        {% if current_user.is_authenticated %}
+          <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" style="color: lawngreen; font-weight: bold;">
+                <i class="fas fa-coins"></i>
+                {{ current_user.prettier_budget }}
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link">Welcome, {{ current_user.username}}</a>
+            </li>
+
+            <li class="nav-item">
+               <a class="nav-link" href="#">Logout</a>
+            </li>
+          </ul>
+        {% else %}
+          <ul class="navbar-nav">
+            <li class="nav-item">
+               <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
+              <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
             </li>
-        </ul>
+          </ul>
+        {% endif %}
+        
       </div>
     </nav>
       {% with messages = get_flashed_messages(with_categories=true) %}
@@ -44,7 +65,7 @@
               <button class="m1-2 mb-1 close" type="button" data-dismiss="alert", aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
-              {{message[8:-2]}}
+              {{message}}
             </div>
           {% endfor %}
         {% endif %}
