--- a/market/templates/base.html
+++ b/market/templates/base.html
@@ -21,10 +21,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item {{ 'active' if path == url_for('home_page')}}">
                 <a class="nav-link" href="{{ url_for('home_page') }}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {{ 'active' if path == url_for('market_page')}}">
                 <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
             </li>
         </ul>
@@ -42,15 +42,15 @@
             </li>
 
             <li class="nav-item">
-               <a class="nav-link" href="#">Logout</a>
+               <a class="nav-link" href="{{ url_for('logout_page')}}">Logout</a>
             </li>
           </ul>
         {% else %}
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item {{ 'active' if path == url_for('login_page')}}">
                <a class="nav-link" href="{{ url_for('login_page') }}">Login</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item {{ 'active' if path == url_for('register_page')}}">
               <a class="nav-link" href="{{ url_for('register_page') }}">Register</a>
             </li>
           </ul>
