--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -9,7 +9,7 @@ Register Page
     <div class="container">
         <form method="POST" class="form-register" style="color:white">
             {{ form.hidden_tag() }}
-            <img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt="">
+            <img class="mb-4 rounded-circle" width="100" height="100" src="https://th.bing.com/th/id/OIG3.IFv_WiqltOQrpa.9iz_O?pid=ImgGn" alt="">
             <h1 class="h3 mb-3 font-weight-normal">
                 Please Create your Account
             </h1>
